@@ -47,38 +47,38 @@ static struct {
 	unsigned int subtag;
 	const char *name;
 } table_sub[] = {
-	{MNOTE_CANON_TAG_SETTINGS_1,  1, N_("Macro mode")},
-	{MNOTE_CANON_TAG_SETTINGS_1,  2, N_("Self time")},
-	{MNOTE_CANON_TAG_SETTINGS_1,  3, N_("Quality")},
-	{MNOTE_CANON_TAG_SETTINGS_1,  4, N_("Flash mode")},
-	{MNOTE_CANON_TAG_SETTINGS_1,  5, N_("Continuous drive mode")},
-	{MNOTE_CANON_TAG_SETTINGS_1,  7, N_("Focus mode")},
-	{MNOTE_CANON_TAG_SETTINGS_1, 10, N_("Image size")},
-	{MNOTE_CANON_TAG_SETTINGS_1, 11, N_("Easy shooting mode")},
-	{MNOTE_CANON_TAG_SETTINGS_1, 13, N_("Contrast")},
-	{MNOTE_CANON_TAG_SETTINGS_1, 14, N_("Saturation")},
-	{MNOTE_CANON_TAG_SETTINGS_1, 15, N_("Sharpness")},
-	{MNOTE_CANON_TAG_SETTINGS_1, 16, N_("ISO")},
-	{MNOTE_CANON_TAG_SETTINGS_1, 17, N_("Metering mode")},
-	{MNOTE_CANON_TAG_SETTINGS_1, 18, N_("Focus type")},
-	{MNOTE_CANON_TAG_SETTINGS_1, 19, N_("AF point selected")},
-	{MNOTE_CANON_TAG_SETTINGS_1, 20, N_("Exposure mode")},
-	{MNOTE_CANON_TAG_SETTINGS_1, 22, N_("Lens type")},
-	{MNOTE_CANON_TAG_SETTINGS_1, 23, N_("Long focal length of lens")},
-	{MNOTE_CANON_TAG_SETTINGS_1, 24, N_("Short focal length of lens")},
-	{MNOTE_CANON_TAG_SETTINGS_1, 25, N_("Focal units per mm")},
-	{MNOTE_CANON_TAG_SETTINGS_1, 26, N_("Maximal aperture")},
-	{MNOTE_CANON_TAG_SETTINGS_1, 28, N_("Flash activity")},
-	{MNOTE_CANON_TAG_SETTINGS_1, 29, N_("Flash details")},
-	{MNOTE_CANON_TAG_SETTINGS_1, 32, N_("Focus mode")},
-	{MNOTE_CANON_TAG_SETTINGS_1, 36, N_("Zoomed resolution")},
-	{MNOTE_CANON_TAG_SETTINGS_1, 37, N_("Zoomed resolution base")},
-	{MNOTE_CANON_TAG_SETTINGS_1, 42, N_("Color tone")},
-	{MNOTE_CANON_TAG_SETTINGS_2,  7, N_("White balance")},
-	{MNOTE_CANON_TAG_SETTINGS_2,  9, N_("Sequence number")},
-	{MNOTE_CANON_TAG_SETTINGS_2, 14, N_("AF point used")},
-	{MNOTE_CANON_TAG_SETTINGS_2, 15, N_("Flash bias")},
-	{MNOTE_CANON_TAG_SETTINGS_2, 19, N_("Subject distance")},
+	{MNOTE_CANON_TAG_SETTINGS_1,  0, N_("Macro mode")},
+	{MNOTE_CANON_TAG_SETTINGS_1,  1, N_("Self time")},
+	{MNOTE_CANON_TAG_SETTINGS_1,  2, N_("Quality")},
+	{MNOTE_CANON_TAG_SETTINGS_1,  3, N_("Flash mode")},
+	{MNOTE_CANON_TAG_SETTINGS_1,  4, N_("Continuous drive mode")},
+	{MNOTE_CANON_TAG_SETTINGS_1,  6, N_("Focus mode")},
+	{MNOTE_CANON_TAG_SETTINGS_1,  9, N_("Image size")},
+	{MNOTE_CANON_TAG_SETTINGS_1, 10, N_("Easy shooting mode")},
+	{MNOTE_CANON_TAG_SETTINGS_1, 12, N_("Contrast")},
+	{MNOTE_CANON_TAG_SETTINGS_1, 13, N_("Saturation")},
+	{MNOTE_CANON_TAG_SETTINGS_1, 14, N_("Sharpness")},
+	{MNOTE_CANON_TAG_SETTINGS_1, 15, N_("ISO")},
+	{MNOTE_CANON_TAG_SETTINGS_1, 16, N_("Metering mode")},
+	{MNOTE_CANON_TAG_SETTINGS_1, 17, N_("Focus type")},
+	{MNOTE_CANON_TAG_SETTINGS_1, 18, N_("AF point selected")},
+	{MNOTE_CANON_TAG_SETTINGS_1, 19, N_("Exposure mode")},
+	{MNOTE_CANON_TAG_SETTINGS_1, 21, N_("Lens type")},
+	{MNOTE_CANON_TAG_SETTINGS_1, 22, N_("Long focal length of lens")},
+	{MNOTE_CANON_TAG_SETTINGS_1, 23, N_("Short focal length of lens")},
+	{MNOTE_CANON_TAG_SETTINGS_1, 24, N_("Focal units per mm")},
+	{MNOTE_CANON_TAG_SETTINGS_1, 25, N_("Maximal aperture")},
+	{MNOTE_CANON_TAG_SETTINGS_1, 27, N_("Flash activity")},
+	{MNOTE_CANON_TAG_SETTINGS_1, 28, N_("Flash details")},
+	{MNOTE_CANON_TAG_SETTINGS_1, 31, N_("Focus mode")},
+	{MNOTE_CANON_TAG_SETTINGS_1, 35, N_("Zoomed resolution")},
+	{MNOTE_CANON_TAG_SETTINGS_1, 36, N_("Zoomed resolution base")},
+	{MNOTE_CANON_TAG_SETTINGS_1, 41, N_("Color tone")},
+	{MNOTE_CANON_TAG_SETTINGS_2,  6, N_("White balance")},
+	{MNOTE_CANON_TAG_SETTINGS_2,  8, N_("Sequence number")},
+	{MNOTE_CANON_TAG_SETTINGS_2, 13, N_("AF point used")},
+	{MNOTE_CANON_TAG_SETTINGS_2, 14, N_("Flash bias")},
+	{MNOTE_CANON_TAG_SETTINGS_2, 18, N_("Subject distance")},
 	{0, 0, NULL}
 };
 
